hoehen und venn diagramm angepasst

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 .style("fill", "white")
 
             d3.selectAll(".buttonText")
-                .style("fill", "#1C3155")
+                .style("fill", "#4b545c")
 
             let x1 = cellWidth * this.id + (cellWidth / 2)
             let lineData = [
