--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
                     line = [],
                     lineNumber = 0,
                     lineHeight = 1.2,
-                    y = text.attr("y"),
+                    //y = text.attr("y"),
+                    y = 5,
                     dy = parseFloat(text.attr("dy")),
                     tspan = text.text(null).append("tspan").attr("x", 0).attr("y", y).attr("dy", dy + "em");
                 while (word = words.pop()) {
