weiß bei mouseover

--- a/index.html
+++ b/index.html
@@ -36,16 +36,17 @@
             .append("g")
             .attr("class", "categ")
             .attr("id", function(d, i) { return i })
-            .on("mouseover", pointer)
+            .on("mouseover", mouseOver)
+            .on("mouseout", mouseOut)
             .on("mousedown", addLink)
 
         svg.append("g")
             .attr("class", "buttonText")
-            .attr("transform", "translate(0,4)")
+            .attr("transform", "translate(0,0)")
             .attr("style", "text-transform:uppercase")
             .call(xAxis)
             .selectAll(".tick text")
-            .attr("id", function(d, i) { return i })
+            .attr("id", function(d, i) { return "idTick" + i})
             .call(wrap)
             .style("pointer-events", "none")
             .on("click", function(d) {
@@ -58,23 +59,10 @@
             .attr("y", 0)
             .attr("height", 50)
             .attr("width", cellWidth - 3)
-            .on("mouseover", handleMouseOver)
-            .on("mouseout", handleMouseOut)
             .on("click", function() {
                 d3.select(".selected").classed("selected", false);
                 d3.select(this).classed("selected", true)
             })
-
-        function handleMouseOver(d,i) {
-               d3.select(this.childNode).selectAll(".buttonText").selectAll(".tick text")
-                .attr("style", "fill:green")
-        }
-
-        function handleMouseOut(d,i) {
-            // Use D3 to select element, change color back to normal
-            d3.select(this.childNode).selectAll(".buttonText").selectAll(".tick text")
-            .attr("style", "fill:yellow")
-        }
 
 
         function wrap(text) {
@@ -127,7 +115,7 @@
                 .attr("class", "chart")
                 .style("height", 42)
                 .style("width", 399)
-                .style("font-weight", 600)
+                // .style("font-weight", 600)
                 .html(function(d) { return d.chartName })
             div.append("img")
                 .attr("class", "chart")
@@ -168,11 +156,7 @@
                 .remove()
             d3.selectAll(".panel")
                 .remove()
-            // d3.select(this.parentNode).selectAll(".buttonText").selectAll(".tick text")
-            //     .style("fill", "white")
-
-            // d3.selectAll(".buttonText")
-            //     .style("fill", "#4b545c")
+        
 
             let x1 = cellWidth * this.id + (cellWidth / 2)
             let lineData = [
@@ -188,13 +172,6 @@
                 { "x": 10, "y": 100 }
             ];
 
-            var bool = d3.select(this.parentNode).selectAll(".categ").data()[this.id].id
-
-            d3.select(this.parentNode).selectAll(".tick text")
-                .style("fill", function(d, i) {
-                    if (bool == this.id) { return "white" };
-                })
-
             d3.selectAll(".link")
                 .data(d)
                 .enter()
@@ -202,7 +179,7 @@
                 .attr("class", "link")
                 .attr("d", lineFunction(lineData))
                 .transition()
-                .duration(10)
+                .duration(1)
                 .attr("d", lineFunction(lineData2))
                 .each("end", next)
 
@@ -219,6 +196,18 @@
         function pointer() {
             this.style.cursor = 'pointer'
         }
+
+         function mouseOver() {
+            this.style.cursor = 'pointer'
+           d3.select( '#idTick' + this.id )
+                .style("fill", "white")
+        }
+
+        function mouseOut() {
+            d3.select(this.parentNode).selectAll(".buttonText").selectAll(".tick text")
+                .style("fill", "#4b545c")
+        }
+    
     })
     </script>
 </body>
