--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
         }
 
         function addLink(d) {
+            console.log(d);
             d3.selectAll(".link")
                 .remove()
             d3.selectAll(".panel")
