--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
         }
 
         function addInfo(el) {
+            console.log(el.id)
             let loookUp = el.category
             let headline = loookUp.replace(/([-]|\.)\s/g, '');
             let infoPanel = container.append("div")
@@ -164,35 +165,18 @@
 
         function addLink(d) {
             mouseOut();
-        
+
             d3.selectAll(".link")
                 .remove()
             d3.selectAll(".panel")
                 .remove()
-        
-            let x1 = cellWidth * this.id + (cellWidth / 2)
-            let lineData = [
-                { "x": x1, "y": 40 },
-                { "x": x1, "y": 40 },
-                { "x": x1, "y": 40 },
-                { "x": x1, "y": 40 }
-            ];
-            let lineData2 = [
-                { "x": x1, "y": 40 },
-                { "x": x1, "y": 60 },
-                { "x": 10, "y": 60 },
-                { "x": 10, "y": 100 }
-            ];
-
             d3.selectAll(".link")
                 .data(d)
                 .enter()
             svg.append("path")
                 .attr("class", "link")
-                .attr("d", lineFunction(lineData))
                 .transition()
-                .duration(1)
-                .attr("d", lineFunction(lineData2))
+                .duration(0.5)
                 .each("end", next)
 
             function next() {
@@ -200,10 +184,6 @@
             }
         }
 
-        let lineFunction = d3.svg.line()
-            .x(function(d) { return d.x; })
-            .y(function(d) { return d.y; })
-            .interpolate("linear");
 
         function pointer() {
             this.style.cursor = 'pointer'
